Chaging unit tests regarding DB layer addition